--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
     </div>
     <script>
-        const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwhKGpQQ3KnRt7fJesbfWyWynKSMRTrjQSgQ1h8KfS90RyHWbY-vNIKKVTaF1zPOMtz/exec';
+        const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwhKGpQQ3KnRt7fJesbfWyWynKSMRTrjQSgQ1h8KfS90RyHWbY-vNIKKVTaF1zPOMtz/exec";
         let studentName = "";
         
         const questions = {
@@ -430,3 +430,4 @@
     </script>
 </body>
 </html>
+
