--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
     </div>
     <script>
-        const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwhKGpQQ3KnRt7fJesbfWyWynKSMRTrjQSgQ1h8KfS90RyHWbY-vNIKKVTaF1zPOMtz/exec";
+        const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbxNIl1n5MMNNauPb5jEtHP_Pzq-ETEUS7g0kc0dPonRU4ostmU2VTfP6sOcxPkpeNgC/exec';
         let studentName = "";
         
         const questions = {
@@ -430,4 +430,5 @@
     </script>
 </body>
 </html>
+
 
