--- a/index.html
+++ b/index.html
@@ -423,29 +423,30 @@
         return array;
     }
 
-    // Fungsi untuk mengirim data ke Google Sheet (Format JSON)
-    function sendDataToSheet(data) {
-        const payload = {
-            namaSiswa: data.namaSiswa,
-            level: data.level,
-            soal: data.soal,
-            jawabanSiswa: data.jawabanSiswa,
-            jawabanBenar: data.jawabanBenar,
-            skor: data.skor
-        };
+   // Ganti seluruh fungsi sendDataToSheet() dengan kode di bawah ini
+async function sendDataToSheet(question, answer, status) {
+    const params = {
+        nama: studentName,
+        level: `Level ${currentLevel + 1}`,
+        skor: currentScore,
+        jawaban: `${question} | Jawaban Siswa: ${answer}`,
+        status: status
+    };
 
-        fetch(SCRIPT_URL, {
+    const formData = new URLSearchParams(params).toString();
+    
+    try {
+        await fetch(SCRIPT_URL, {
             method: 'POST',
-            mode: 'no-cors',
-            cache: 'no-cache',
+            body: formData,
             headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify(payload)
-        })
-        .then(response => console.log("Data sent successfully"))
-        .catch(error => console.error("Error sending data:", error));
+                'Content-Type': 'application/x-www-form-urlencoded'
+            }
+        });
+    } catch(error) {
+        console.error('Error saat mengirim data:', error);
     }
+}
     
     // Memberikan akses global ke fungsi yang dipanggil dari HTML (onclick)
     window.startGame = startGame;
@@ -456,4 +457,5 @@
 
 </body>
 </html>
+
 
