--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Resep Ajaib Koki Cilik</title>
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Comic Nueu', cursive, sans-serif;
             background: linear-gradient(135deg, #f0e68c, #ffebcd);
             display: flex;
             justify-content: center;
@@ -105,6 +105,19 @@
             flex-direction: column;
             align-items: center;
         }
+        <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resep Ajaib Koki Cilik</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
+
+    <style>
+        /* ... CSS Anda selanjutnya ... */
+    </style>
+</head>
     </style>
 </head>
 <body>
@@ -442,3 +455,4 @@
     </script>
 </body>
 </html>
+
