--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resep Ajaib Koki Cilik</title>
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resep Ajaib Koki Cilik</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: 'Comic Nueu', cursive, sans-serif;
+            font-family: 'Comic Relief', cursive;
             background: linear-gradient(135deg, #f0e68c, #ffebcd);
             display: flex;
             justify-content: center;
@@ -105,13 +113,6 @@
             flex-direction: column;
             align-items: center;
         }
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resep Ajaib Koki Cilik</title>
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
     </style>
 </head>
 <body>
@@ -449,5 +450,3 @@
     </script>
 </body>
 </html>
-
-
